chore: fix horizontal scrolling bug

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ h3 {
   display: flex;
   height: 15rem;
   margin: 1.75rem auto -0.25rem;
+  overflow: hidden;
   padding: 1rem;
   transform: rotate(-55deg);
   width: 15rem;
